<resources>
    <string name="permission_message_title">แจ้งเตือน</string>
    <string name="permission_message_button">ตกลง</string>
    <string name="permission_message_msg">กรุณาให้สิทธิ์ก่อนเข้าใช้งาน TSR Mobile App</string>
    <string name="permission_message_camera">อนุญาตให้ TSR Mobile App ถ่ายภาพและบันทึกวิดีโอก่อนเข้าใช้งาน</string>
    <string name="permission_message_storage">อนุญาตให้ TSR Mobile App เข้าถึงรูปภาพ สื่อ และไฟล์บนอุปกรณ์ก่อนเข้าใช้งาน</string>
    <string name="permission_message_location">อนุญาตให้ TSR Mobile App เข้าถึงตำแหน่งของอุปกรณ์ก่อนเข้าใช้งาน</string>
    <string name="permission_message_camera_and_storage">อนุญาตให้ TSR Mobile App ถ่ายภาพ บันทึกวิดีโอ เข้าถึงรูปภาพ สื่อ และไฟล์บนอุปกรณ์ก่อนเข้าใช้งาน</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel_thiensurat</string>
    <string name="default_notification_channel_name" translatable="true">thiensurat</string>
    <string name="button_add_customer">เพิ่มลูกค้าใหม่</string>
    <string name="button_add">จัดเก็บข้อมูล</string>
    <string name="button_back">ย้อนกลับ</string>
    <string name="button_credit_choose_date">เลือกวันเก็บเงิน</string>
    <string name="button_product_recommend">สินค้าแนะนำ</string>
    <string name="button_ok">ตกลง</string>
    <string name="button_check">ตรวจสอบสินค้า</string>
    <string name="button_import">นำเข้าสินค้า</string>
    <string name="button_close">ปิดการตรวจสอบ</string>
    <string name="button_login">LOGIN</string>
    <string name="button_showlist">แสดงรายการ</string>
    <string name="button_group">จัดกลุ่ม</string>
    <string name="button_appointment_date">จัดวันนัด</string>
    <string name="button_print">พิมพ์</string>
    <string name="button_print_receipt">พิมพ์ใบรับเงิน</string>
    <string name="button_void">ยกเลิกใบเสร็จ</string>
    <string name="button_scanemployee">สแกนรหัสพนักงาน</string>
    <string name="button_next">ถัดไป</string>
    <string name="button_more_address">ข้อมูลเพิ่มเติม</string>
    <string name="button_end">จบการทำงาน</string>
    <string name="button_search">ค้นหา</string>
    <string name="button_change_contract">เปลี่ยนสัญญา</string>
    <string name="button_payment">รับชำระ</string>
    <string name="button_save_emp">พนักงานขาย</string>
    <string name="button_save_customer">บันทึกข้อมูลลูกค้า</string>
    <string name="button_save_employee">บันทึกข้อมูลพนักงานขาย</string>
    <string name="button_choice_payment">เลือกประเภทการชำระเงิน</string>
    <string name="button_detail_payment">แสดงรายละเอียดการซื้อ</string>
    <string name="button_detail_contract">แสดงรายละเอียดสัญญา</string>
    <string name="button_detail_contract_preorder">แสดงรายละเอียดใบจอง</string>
    <string name="button_detail_quotation">รายละเอียดราคาสินค้า</string>
    <string name="button_pay">ดำเนินการชำระเงิน</string>
    <string name="button_camera">ถ่ายรูป</string>
    <string name="button_more">ข้อมูลลูกค้าเพิ่มเติม</string>
    <string name="button_receipt">ข้อมูลใบรับเงิน</string>
    <string name="button_update_list">ปรับปรุงรายการ</string>
    <string name="button_send_image">ส่งรูปตรวจสอบ</string>
    <string name="button_save">บันทึก</string>
    <string name="button_confirm">ยืนยัน</string>
    <string name="button_confirm_print">ยืนยัน/พิมพ์</string>
    <string name="button_contract_confirm">ยืนยันการออกสัญญา</string>
    <string name="button_survey_befor_contract_confirm">กรอกข้อมูลเพิ่มเติม</string>
    <string name="button_update_customer_phone">แก้ไขเบอร์ลูกค้า</string>
    <string name="button_contract_confirm_preorder">ยืนยันการออกใบจอง</string>
    <string name="button_conclude">สรุป</string>
    <string name="button_save_manual_receipt">บันทึกใบเสร็จมือ</string>
    <string name="button_save_manual_contract">บันทึกใบสัญญามือ</string>
    <string name="button_save_manual_contract_preorder">บันทึกใบจอง</string>
    <string name="button_save_manual_impound_product">บันทึกใบถอดเครื่องมือ</string>
    <string name="button_save_manual_change_product">บันทึกใบเปลี่ยนเครื่องมือ</string>
    <string name="button_synchronize_database">ปรับปรุงฐานข้อมูล</string>
    <string name="button_delete_image">ลบภาพถ่าย</string>
    <string name="button_import_image">เพิ่มภาพถ่าย</string>
    <string name="button_add_return_product">เพิ่มรายการส่งคืน</string>
    <string name="button_save_return_product">บันทึกรายการส่งคืน</string>
    <string name="button_cheak_photo">ตรวจสอบภาพถ่าย</string>
    <string name="button_add_map">บันทึกรูปแผนที่</string>
    <string name="button_use_information">ใช้ข้อมูล</string>
    <string name="button_cancel">ยกเลิก</string>
    <string name="button_return">ทำคืน</string>
    <string name="button_display_map">แสดงพื้นที่</string>
    <string name="button_import_data">นำเข้าข้อมูล</string>
    <string name="button_check_audit">ตรวจสอบ</string>
    <string name="button_complain">แจ้งปัญหา</string>
    <string name="button_payment_credit">เก็บเงิน</string>
    <string name="button_request_next_payment">ขออนุมัติเก็บเงิน</string>
    <string name="button_request_drawdown">ขอเบิก</string>
    <string name="button_reject">ไม่อนุมัติ</string>
    <string name="button_edit">แก้ไข</string>
    <string name="button_approve">อนุมัติ</string>
    <string name="button_send_to_customer">ส่งให้ลูกค้า</string>
    <string name="button_type_normal">NORMAL</string>
    <string name="button_type_satellite">SATELLITE</string>
    <string name="button_type_terrain">TERRAIN</string>
    <string name="button_type_hybrid">HYBRID</string>
    <string name="button_add_sales_quotation">เพิ่มใบเสนอราคา</string>
    <string name="main_menu_profile">ข้อมูลผู้ใช้งาน</string>
    <string name="main_menu_detail">รายละเอียดลูกค้า</string>
    <string name="main_menu_default">D3CC378BE6FE4E11B983522CAB716918</string>
    <string name="main_menu_admin">ADMIN</string>
    <string name="main_menu_report_daily_summary">9617724BB2D04EB39FEE6679C8D69A63</string>
    <string name="main_menu_report_emp_team">9CDF665BC9414C919BBF17CE37C75A78</string>
    <string name="main_menu_report_product">49A1CA386B8F41709FEFE91C34C932B2</string>
    <string name="main_menu_report_install_payment">8F7FD9CE22B54EE080DFA7F0876AE29C</string>
    <string name="main_menu_report_change_product">2C8C1ADDBF0A4753ABEE2E020BD7E5F4</string>
    <string name="main_menu_report_impound_product">63483E14C2B8440A85A8479270452777</string>
    <string name="main_menu_report_change_contract">303880FB8FB04787A0CB15C9F87875E4</string>
    <string name="main_menu_report_payment_appointment">D87F63CBBD4741F7AEF98D6CD1591E95</string>
    <string name="main_menu_report_writeoff_npl">4717B6999D3A47BCAD42B0201DB10B52</string>
    <string name="main_menu_report_approved">1F146D42AA064A008712EAC9C259C286</string>
    <string name="main_menu_report_complain">560D8AAB6632419BA91740EECA99F3D2</string>
    <string name="main_menu_report_trade_product">4D5967B657A540048396833FC25E52AD</string>
    <string name="main_menu_report_payment_sendmoney">42993D68EE7644AC89BEA7FBC206A3A7</string>
    <string name="main_menu_report_zone">98834998E58044C6BA104E1C6F58D0B2</string>
    <string name="main_menu_report_re_print">167841852CC246A9B0C8B75F461893A5</string>
    <string name="main_menu_report_credit_saleaudit">1329C09262004CE1A97C2671D9336B3D</string>
    <string name="main_menu_report_credit_next_payment">3117DEED82F14F5192BEDBCA65FD0E39</string>
    <string name="main_menu_report_credit_sendmoney">05B89C725A324DD4BC178E1CD7EDCEC7</string>
    <string name="main_menu_report_credit_contract_close_account">7DD266E717B74201A33B793345B94594</string>
    <string name="menu_credit_check_status">9C8A3CEB21C14AA38CABB655F472B0C3</string>
    <string name="main_menu_preorder">6C18CAD5E7D345379E6E15720FFEE318</string>
    <string name="main_menu_preorder_setting">9C8A3CEB21C14AA38CABB655F472B0C1</string>
    <string name="main_menu_lead_online">0BF75CB7521F47B585FDDED33726575D</string>
    <string name="main_menu_sales_quotation">0BF75CB7521F47B585FDDED33726575E</string>
    <string name="main_menu_team">E9328B14D4CA4B18AB36E0FA8FA2A1F3</string>
    <string name="main_menu_checkstock">CBCEA1E500E841E190C3E7A06C85963B</string>
    <string name="main_menu_sales">907350148A5641D2B88DA7B55C6D1ED9</string>
    <string name="main_menu_money">EFE8B972F4AF46298FA41251F982C49A</string>
    <string name="main_menu_first">034354E0BF0740778069B60257E6457B</string>
    <string name="main_menu_other">CB7C5E824A8840E9975991784B7EFA99</string>
    <string name="main_menu_logout">598A4947B7B2469382A8E6CF4A9B820F</string>
    <string name="main_menu_remove">CED6F46DEF4849E096094CF0465BACCC</string>
    <string name="main_menu_change">EFB9F32B8ABF48FE82DF2151EF820D44</string>
    <string name="main_menu_document">BA37885C0724482DAFA57B3847186484</string>
    <string name="main_menu_loss">F35052770BE447D3A83C36B2092E8ED7</string>
    <string name="main_menu_next_period">76C9B156947D45F18E1FFE142433E21C</string>
    <string name="main_menu_total">BA494EC65C514D5181D87924A8A37374</string>
    <string name="main_menu_report_daily_summary_sale_by_product_online">6BB71DD0E2D7466EA868A9B7484DDAE0</string>
    <string name="main_menu_brochure">AB4B77B138304CE6BD8C0C0847700CCC</string>
    <string name="main_menu_complain">CB0DB21EA949475C9497149CE6501F50</string>
    <string name="main_menu_return_product">DFF73DF3B3C74B8EA1DEA34CC30B71BF</string>
    <string name="main_menu_refresh">726E3943D86F444E9B248AF764070C67</string>
    <string name="main_menu_edit_contracts">81C18DDE57924C7A9B0F59E8713F8237</string>
    <string name="main_menu_credit_employee_detail">CF093F8084634F989805F5A0E438C901</string>
    <string name="main_menu_credit_import_credit_data">81275750A3314169ADD0F9B3B9EE0E98</string>
    <string name="main_menu_credit_import_audit_data">E981C77F58AC4257BE530FB5D81C1FD9</string>
    <string name="main_menu_credit_audit_check_customers">6C18CAD5E7D345379E6E15720FFEE317</string>
    <string name="main_menu_credit_salepaymentperiod_credit_customers">C07FCC694E284F469B9AC4C99C96DDCE</string>
    <string name="main_menu_credit_cut_off_contract">78392D3B37274B2AA7045F9E591CAE4C</string>
    <string name="main_menu_credit_cut_divisor_contract">F1EE3F9849EE4397A2B2911BD6321AAC</string>
    <string name="main_menu_credit_contract_details">5BCF23E3AB344FCBBDFC4E0B26D2F87F</string>
    <string name="main_menu_credit_sort_order_default_audit">B1587E19527D4FD980425A4727C310D4</string>
    <string name="main_menu_credit_sort_order_default_credit">E487C8A68DC84F0C80BD0A3A1C87ACF4</string>
    <string name="title_scan_old_product">สแกนเครื่องเก่า</string>
    <string name="title_check_photo">ตรวจสอบภาพถ่าย</string>
    <string name="title_detail_customers">รายละเอียดลูกค้า</string>
    <string name="caption_return_product_list">ประวัติการส่งคืนสินค้า</string>
    <string name="label_contract_no">เลขที่สัญญา</string>
    <string name="label_customer_name">ชื่อลูกค้า</string>
    <string name="label_firstname_lastname">ชื่อ-สกุล</string>
    <string name="label_install_address">ที่อยู่ติดตั้ง</string>
    <string name="label_product_name">ชื่อสินค้า</string>
    <string name="label_product_no">รหัสสินค้า</string>
    <string name="label_payment_appointment_date">วันนัดชำระ</string>
    <string name="label_order">ลำดับ</string>
    <string name="next_payment_customer_search">ค้นหา</string>
    <string name="loss_main_title">ค้นหาลูกค้าที่จะตัดสัญญาค้าง</string>
    <string name="loss_main_liss_header">ลูกค้าที่ยังไม่ได้ชำระเงินงวดแรก</string>
    <string name="manual_document_detail_note">หมายเหตุ</string>
    <string name="manual_document_contract_title">บันทึกใบสัญญามือ</string>
    <string name="manual_document_contract_doc_no">เลขที่ใบสัญญา</string>
    <string name="manual_document_contract_book_no">ใบสัญญามือเล่มที่</string>
    <string name="manual_document_contract_running_no">ใบสัญญามือเลขที่</string>
</resources>