<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_view_header_height"
    android:background="@color/bg_table_main_header"
    android:weightSum="1">

    <TextView
        android:id="@+id/header_CONTNO_No"
        style="@style/TextView.Label.bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.3"
        android:gravity="center"
        android:text="@string/label_contract_no" />

    <TextView
        android:id="@+id/header_Name"
        style="@style/TextView.Label.bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/label_customer_name" />

    <TextView
        android:id="@+id/header_Order"
        style="@style/TextView.Label.bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/label_order" />

</LinearLayout>