<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/ViewTitle"
        android:orientation="horizontal"
        android:padding="@dimen/padding_normal">

        <TextView
            android:id="@+id/txtViewCount"
            style="@style/TextView.Value"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/font_color_white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingBottom="@dimen/padding_small"
        android:paddingTop="@dimen/padding_small"
        android:weightSum="5">

        <TextView
            style="@style/TextView.Value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="right"
            android:layout_marginLeft="@dimen/padding_normal"
            android:layout_marginRight="@dimen/padding_normal"
            android:text="@string/button_search" />

        <EditText
            android:id="@+id/txtSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_weight="3.4"
            android:hint="เลขที่สัญญา หรือ ชื่อลูกค้า"
            android:textSize="@dimen/normal_font_size">
        </EditText>

        <Button
            android:id="@+id/btnSearch"
            style="@style/ButtonTop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:layout_marginLeft="@dimen/padding_normal"
            android:layout_marginRight="@dimen/padding_normal"
            android:text="@string/button_search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_view_header_height"
        android:background="@color/bg_table_main_header"
        android:weightSum="1">

        <TextView
            android:id="@+id/header_CONTNO_No"
            style="@style/TextView.Label.bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/label_contract_no" />

        <TextView
            android:id="@+id/header_Name"
            style="@style/TextView.Label.bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/label_customer_name" />

        <TextView
            android:id="@+id/header_Order"
            style="@style/TextView.Label.bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/label_order" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/svOrder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal" />


</LinearLayout>